# formating

./: .gitignore  document_formatter_config.py  document_formatting_agent.py  example_first_occurrence_numbering.py  main.py  paragraph_cleaning_utils.py  paths.py  prompt.txt  pyproject.toml  requirements.txt  style_mapping.py  style_mapping_config.py  styling_utils.py  test.ipynb
config/: __init__.py  constants.py  formatting_utils.py  mappings.py  patterns.py  utils.py
data/input/: style.json  style_config.yaml  style_config_schema.yaml  style_schema.json  test.docx  test_yaml.docx
data/output/: StylesApplied.docx  test_modified.docx  ~$st_modified.docx
project_docs/: features.md  project-overview.md
styling_utils/: __init__.py  bullet_list_styling_util.py  chapter_section_styles_utils.py  header_footer_styling_util.py  numbering_utils.py  paragraph_cleaning_utils.py  style_appliers.py  table_figure_titles_utils.py
styling_utils/content/: __init__.py  header_footer_styling_utils.py
styling_utils/core/: __init__.py  style_appliers.py
styling_utils/formatting/: __init__.py  bullet_list_styling_utils.py  chapter_section_styles_utils.py  nested_styling_utils.py  paragraph_cleaning_utils.py  table_figure_titles_utils.py
styling_utils/numbering/: __init__.py  chapter_section_styles_utils.py  numbering_utils.py
